added footer, fixed navs, first half is PixelPerfect

--- a/header.css
+++ b/header.css
@@ -27,6 +27,8 @@ color: #232323;
 font-weight: 400;
 font-size: 38px;
 line-height: 38px;
+margin-top: 5px;
+margin-left: 31px;
 margin-right: 350px;
 letter-spacing: 1.1px;
 text-transform: uppercase;
