--- a/footer.css
+++ b/footer.css
@@ -1,4 +1,8 @@
+footer{
+    height: fit-content;
+}
 .footer-form-section{
+
     height: 329px;
     display: flex;
     justify-content: center;
@@ -16,6 +20,28 @@ margin: auto;
 text-align: center;
 text-transform: uppercase;
 margin-bottom: 16px;
+
+color: #232323;
+}
+.input::placeholder{
+font-family: 'Mulish', sans-serif;
+font-style: italic;
+font-weight: 400;
+font-size: 16px;
+line-height: 20px;
+letter-spacing: 1.5px;
+color: #797979;
+}
+.input{
+    padding-left: 23px;
+font-family: 'Mulish', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 20px;
+
+/* identical to box height */
+letter-spacing: 1.5px;
 
 color: #232323;
 }
@@ -68,6 +94,9 @@ text-transform: uppercase;
 
 color: #FFFFFF;
 }
+.subscription-form button:hover{
+    background-color: #40A385;
+}
 .subscription-form input:focus{
     outline: none;
 box-shadow: none;
@@ -86,12 +115,13 @@ height: 55px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 24px;
+    margin-bottom: 25px;
 }
 .footer-pic{
 
     border-radius: 50%;
-    margin-bottom: 40px;
+    margin-bottom: 29px;
+    margin-top: 0px;
 }
 .footer-socials-section{
     background-color: #232323;
@@ -106,6 +136,7 @@ height: 55px;
 .footer-socials{
     display: flex;
     justify-content: center;
+    padding-left: 45px;
 }
 .footer-socials-section h3{
 font-family: 'Josefin Sans';
@@ -119,11 +150,15 @@ text-transform: uppercase;
 color: #FFFFFF;
 }
 .footer-icon{
-    filter: brightness(400%);
+    width: 20px;
+    filter: invert(95%) sepia(100%) saturate(19%) hue-rotate(279deg) brightness(105%) contrast(104%);
     margin-right: 32px;
 }
+.footer-icon:hover{
+    filter: invert(54%) sepia(50%) saturate(429%) hue-rotate(111deg) brightness(93%) contrast(89%);
+}
 .copyright-div{
-    height: 108px;
+    height: 162px;
     width: 100%;
     background-color: #323232;
     margin-top: 46px;
@@ -147,6 +182,6 @@ letter-spacing: 1.5px;
     padding: 45px;
 }
 .socials-content-box{
-    margin-top: 100px;
+    padding-top:58px;
 
 }
