--- a/footer.css
+++ b/footer.css
@@ -185,3 +185,37 @@ letter-spacing: 1.5px;
     padding-top:58px;
 
 }
+
+@media  screen and (min-width : 200px) and (max-width: 1250px) {
+ .footer-form-section{
+    flex-direction: column;
+    width: 100%;
+    height: 500px;
+ }   
+ 
+ .form-text-box{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 400px;
+    justify-content: space-between;
+ }
+ .form-text-box p{
+    width: 100%;
+    margin: auto;
+ }
+ .subscription-form{
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 70%;
+    width: 100%;
+
+ }
+ .input{
+    width: 70%;
+ }
+ .submit{
+    height: 55px;
+ }
+}
