--- a/main.css
+++ b/main.css
@@ -140,6 +140,22 @@ margin-bottom: 22px;
     margin-top: 14px;
     margin-bottom: 53px;
 }
+.img-info-container p{
+    font-style: normal;
+font-weight: 800;
+font-size: 16px;
+line-height: 24px;
+
+/* or 150% */
+letter-spacing: 1.5px;
+
+color: #232323;
+
+
+}
+.img-date-info{
+    margin-bottom: 26px;
+}
 .tag-cloud h3{
     text-transform: uppercase;
     font-size: 20px;
